# swig

./: CMakeLists.txt
.github/workflows/: windows-cmake.yml
CMake/: FindFFI.cmake  swig_add_python_example.cmake  swigwarn_generate.cmake
Doc/Manual/: Windows.html
Examples/: CMakeLists.txt
Examples/python/: CMakeLists.txt
Examples/python/callback/: CMakeLists.txt  example.i
Examples/python/class/: CMakeLists.txt  example.i
Examples/python/constants/: CMakeLists.txt  example.i
Examples/python/contract/: CMakeLists.txt  example.i
Examples/python/docstrings/: CMakeLists.txt  example.i
Examples/python/doxygen/: example.i
Examples/python/enum/: CMakeLists.txt  example.i
Examples/python/exception/: CMakeLists.txt  example.i
Examples/python/exceptproxy/: CMakeLists.txt  example.i
Examples/python/extend/: CMakeLists.txt  example.i
Examples/python/external_runtime/: example.i
Examples/python/funcptr/: CMakeLists.txt  example.i
Examples/python/funcptr2/: CMakeLists.txt  example.i
Examples/python/functor/: CMakeLists.txt  example.i
Examples/python/import/: CMakeLists.txt  bar.i  base.i  foo.i  spam.i
Examples/python/import_packages/: CMakeLists.txt
Examples/python/import_packages/from_init1/: CMakeLists.txt
Examples/python/import_packages/from_init1/py2/pkg2/: bar.i  foo.i
Examples/python/import_packages/from_init1/py3/pkg2/: bar.i  foo.i
Examples/python/import_packages/from_init2/: CMakeLists.txt
Examples/python/import_packages/from_init2/py2/pkg2/: bar.i
Examples/python/import_packages/from_init3/: CMakeLists.txt
Examples/python/import_packages/from_init3/py2/pkg2/: bar.i
Examples/python/import_packages/module_is_init/: CMakeLists.txt
Examples/python/import_packages/module_is_init/pkg1/: foo.i
Examples/python/import_packages/namespace_pkg/: robin.i
Examples/python/import_packages/relativeimport1/py2/pkg2/pkg3/: foo.i
Examples/python/import_packages/relativeimport1/py3/pkg2/: bar.i
Examples/python/import_packages/relativeimport2/py2/pkg2/pkg3/pkg4/: foo.i
Examples/python/import_packages/relativeimport2/py3/pkg2/: bar.i
Examples/python/import_packages/relativeimport2/py3/pkg2/pkg3/pkg4/: foo.i
Examples/python/import_packages/relativeimport3/py2/pkg2/: bar.i
Examples/python/import_packages/relativeimport3/py3/pkg2/: bar.i
Examples/python/import_packages/relativeimport3/py3/pkg2/pkg3/: foo.i
Examples/python/import_packages/same_modnames1/pkg1/: foo.i
Examples/python/import_packages/same_modnames1/pkg2/: foo.i
Examples/python/import_packages/same_modnames2/pkg1/pkg2/: foo.i
Examples/python/import_packages/split_modules/vanilla/pkg1/: foo.i
Examples/python/import_packages/split_modules/vanilla_split/: foo.i
Examples/python/import_template/: CMakeLists.txt  bar.i  base.i  foo.i  spam.i
Examples/python/libffi/: CMakeLists.txt  example.i
Examples/python/multimap/: CMakeLists.txt  example.i
Examples/python/operator/: CMakeLists.txt  example.i
Examples/python/performance/func/: Simple.i
Examples/python/performance/hierarchy/: Simple.i
Examples/python/performance/hierarchy_operator/: Simple.i
Examples/python/performance/operator/: Simple.i
Examples/python/pointer/: CMakeLists.txt  example.i
Examples/python/reference/: CMakeLists.txt  example.i
Examples/python/simple/: CMakeLists.txt  example.i
Examples/python/smartptr/: CMakeLists.txt  example.i
Examples/python/std_map/: CMakeLists.txt  example.i
Examples/python/std_vector/: CMakeLists.txt  example.i
Examples/python/template/: CMakeLists.txt  example.i
Examples/python/varargs/: CMakeLists.txt  example.i
Examples/python/variables/: CMakeLists.txt  example.i
Examples/test-suite/: CMakeLists.txt
